[gd_scene load_steps=23 format=2]

[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://_resources/card_shop/full_bg.png" type="Texture" id=2]
[ext_resource path="res://_scenes/scene_transitioner.tscn" type="PackedScene" id=3]
[ext_resource path="res://_resources/scene_duel/top_info_box.png" type="Texture" id=4]
[ext_resource path="res://_resources/scene_deck_building/back_button.png" type="Texture" id=5]
[ext_resource path="res://_scripts/options_scene.gd" type="Script" id=6]
[ext_resource path="res://_resources/card_shop/window_code.png" type="Texture" id=7]
[ext_resource path="res://_resources/scene_duel/darken_bg.png" type="Texture" id=8]
[ext_resource path="res://_resources/game_options/check-mark.png" type="Texture" id=9]
[ext_resource path="res://_resources/free_duel/focus_shadow.png" type="Texture" id=10]
[ext_resource path="res://_resources/menu_screen/big_menu_button.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=10]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 68
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0313726, 0.0862745, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.356863, 0.407843, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0313726, 0.0862745, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.356863, 0.407843, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0313726, 0.0862745, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.356863, 0.407843, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.356863, 0.407843, 0.435294, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0313726, 0.0862745, 0.117647, 1 )
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.356863, 0.407843, 0.435294, 1 )

[sub_resource type="Theme" id=4]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/decrement_pressed = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/icons/increment_pressed = null
HScrollBar/styles/grabber = SubResource( 3 )
HScrollBar/styles/grabber_highlight = SubResource( 5 )
HScrollBar/styles/grabber_pressed = SubResource( 6 )
HScrollBar/styles/scroll = SubResource( 7 )
HScrollBar/styles/scroll_focus = SubResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 29
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 68
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -4
font_data = ExtResource( 1 )

[node name="options_scene" type="Node2D"]
script = ExtResource( 6 )

[node name="FullBg" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="FocusShadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 639, 513 )
texture = ExtResource( 10 )

[node name="game_credits" type="Label" parent="FocusShadow"]
visible = false
margin_left = -630.0
margin_top = 133.0
margin_right = 632.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "Soundtrack and SFX: youtube.com/@lohweo
Everything else: youtube.com/@Rafa_SCN"
autowrap = true

[node name="user_interface" type="Node2D" parent="."]

[node name="top_info_box" type="Sprite" parent="user_interface"]
texture = ExtResource( 4 )
centered = false

[node name="window_title" type="Label" parent="user_interface/top_info_box"]
margin_left = 1.0
margin_top = -15.0
margin_right = 1280.0
margin_bottom = 58.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Game Options"
align = 1
valign = 1

[node name="back_button" type="Button" parent="user_interface"]
margin_right = 12.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 28, 25 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="UI_tween" type="Tween" parent="user_interface"]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 53.0
margin_right = 1279.0
margin_bottom = 617.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 375.0
margin_top = 29.0
margin_right = 903.0
margin_bottom = 534.0
custom_constants/separation = 24

[node name="option_volume" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 126.0
rect_min_size = Vector2( 528, 126 )

[node name="window_frame" type="Sprite" parent="CenterContainer/VBoxContainer/option_volume"]
texture = ExtResource( 7 )
centered = false

[node name="window_title" type="Label" parent="CenterContainer/VBoxContainer/option_volume"]
margin_left = 8.0
margin_top = 2.0
margin_right = 513.0
margin_bottom = 40.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Game Volume"
valign = 1

[node name="volume_percent_indicator" type="Label" parent="CenterContainer/VBoxContainer/option_volume"]
margin_left = 403.0
margin_top = 2.0
margin_right = 513.0
margin_bottom = 40.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "100%"
align = 2
valign = 1

[node name="scroller" type="HScrollBar" parent="CenterContainer/VBoxContainer/option_volume"]
margin_left = 28.0
margin_top = 63.0
margin_right = 498.0
margin_bottom = 101.0
theme = SubResource( 4 )
max_value = 11.0
step = 0.1
page = 1.0
value = 1.0

[node name="option_language" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 528.0
margin_bottom = 355.0
rect_min_size = Vector2( 528, 205 )

[node name="window_frame2" type="Sprite" parent="CenterContainer/VBoxContainer/option_language"]
position = Vector2( 0, 81 )
texture = ExtResource( 7 )
centered = false

[node name="window_frame" type="Sprite" parent="CenterContainer/VBoxContainer/option_language"]
texture = ExtResource( 7 )
centered = false

[node name="window_title" type="Label" parent="CenterContainer/VBoxContainer/option_language"]
margin_left = 8.0
margin_top = 2.0
margin_right = 513.0
margin_bottom = 40.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Game Language"
valign = 1

[node name="english_language" type="Label" parent="CenterContainer/VBoxContainer/option_language"]
margin_left = 34.0
margin_top = 63.0
margin_right = 450.0
margin_bottom = 101.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "English"
valign = 1

[node name="option_check" type="Sprite" parent="CenterContainer/VBoxContainer/option_language/english_language"]
position = Vector2( 453, 19 )
scale = Vector2( 0.336, 0.336 )
texture = ExtResource( 8 )

[node name="checkmark" type="Sprite" parent="CenterContainer/VBoxContainer/option_language/english_language/option_check"]
position = Vector2( 2, 0 )
scale = Vector2( 0.148, 0.148 )
texture = ExtResource( 9 )

[node name="english_button" type="Button" parent="CenterContainer/VBoxContainer/option_language/english_language"]
margin_left = -29.0
margin_top = -19.0
margin_right = 488.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="portuguese_language" type="Label" parent="CenterContainer/VBoxContainer/option_language"]
margin_left = 34.0
margin_top = 144.0
margin_right = 450.0
margin_bottom = 182.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "PortuguÃªs (Brasil)"
valign = 1

[node name="option_check" type="Sprite" parent="CenterContainer/VBoxContainer/option_language/portuguese_language"]
position = Vector2( 453, 19 )
scale = Vector2( 0.336, 0.336 )
texture = ExtResource( 8 )

[node name="checkmark" type="Sprite" parent="CenterContainer/VBoxContainer/option_language/portuguese_language/option_check"]
visible = false
position = Vector2( 2, 0 )
scale = Vector2( 0.148, 0.148 )
texture = ExtResource( 9 )

[node name="portuguese_button" type="Button" parent="CenterContainer/VBoxContainer/option_language/portuguese_language"]
margin_left = -29.0
margin_top = -19.0
margin_right = 488.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="option_others" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 379.0
margin_right = 528.0
margin_bottom = 505.0
rect_min_size = Vector2( 528, 126 )

[node name="window_frame" type="Sprite" parent="CenterContainer/VBoxContainer/option_others"]
texture = ExtResource( 7 )
centered = false

[node name="window_title" type="Label" parent="CenterContainer/VBoxContainer/option_others"]
margin_left = 8.0
margin_top = 2.0
margin_right = 513.0
margin_bottom = 40.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Other Options"
valign = 1

[node name="auto_save" type="Label" parent="CenterContainer/VBoxContainer/option_others"]
margin_left = 34.0
margin_top = 63.0
margin_right = 450.0
margin_bottom = 101.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 9 )
text = "Auto-Save after Duels"
valign = 1

[node name="option_check" type="Sprite" parent="CenterContainer/VBoxContainer/option_others/auto_save"]
position = Vector2( 453, 19 )
scale = Vector2( 0.336, 0.336 )
texture = ExtResource( 8 )

[node name="checkmark" type="Sprite" parent="CenterContainer/VBoxContainer/option_others/auto_save/option_check"]
visible = false
position = Vector2( 2, 0 )
scale = Vector2( 0.148, 0.148 )
texture = ExtResource( 9 )

[node name="autosave_button" type="Button" parent="CenterContainer/VBoxContainer/option_others/auto_save"]
margin_left = -29.0
margin_top = -19.0
margin_right = 488.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="option_challenges" type="Control" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 529.0
margin_right = 528.0
margin_bottom = 529.0

[node name="window_frame" type="Sprite" parent="CenterContainer/VBoxContainer/option_challenges"]
texture = ExtResource( 7 )
centered = false

[node name="window_title" type="Label" parent="CenterContainer/VBoxContainer/option_challenges"]
margin_left = 8.0
margin_top = 2.0
margin_right = 513.0
margin_bottom = 40.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Game Challenges"
valign = 1

[node name="btn_credits" type="Button" parent="."]
margin_left = 368.0
margin_top = 600.0
margin_right = 906.0
margin_bottom = 714.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 269, 57 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true

[node name="button_text" type="Label" parent="btn_credits"]
margin_left = 6.0
margin_top = 3.0
margin_right = 532.0
margin_bottom = 111.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 11 )
text = "Game Credits"
align = 1
valign = 1

[node name="white_over" type="Sprite" parent="btn_credits"]
visible = false
modulate = Color( 100, 100, 100, 0.00784314 )
position = Vector2( 6, 3 )
texture = ExtResource( 11 )
centered = false

[node name="shadow" type="Sprite" parent="btn_credits"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 13, 10 )
texture = ExtResource( 11 )
centered = false

[node name="tween" type="Tween" parent="btn_credits"]

[node name="scene_transitioner" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="button_up" from="user_interface/back_button" to="." method="_on_back_button_button_up"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/option_volume/scroller" to="." method="_on_scroller_value_changed"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/option_language/english_language/english_button" to="." method="_on_english_button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/option_language/portuguese_language/portuguese_button" to="." method="_on_portuguese_button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/option_others/auto_save/autosave_button" to="." method="_on_autosave_button_button_up"]
[connection signal="button_up" from="btn_credits" to="." method="_on_btn_credits_button_up"]
